Add - basic styling for game.html

--- a/pages/game.html
+++ b/pages/game.html
@@ -3,10 +3,14 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="./../styles/base/base.css" />
+    <link rel="stylesheet" href="./../styles/base/utilities.css" />
+    <link rel="stylesheet" href="./../styles/game.css" />
     <script src="./../libs/phaser.js"></script>
     <title>Retro Runaway</title>
   </head>
-  <body>
+  <body class="flex align-center">
+    <div class="left"></div>
     <script src="./../scripts/game.js"></script>
   </body>
 </html>
