Add - scoring system

--- a/pages/game.html
+++ b/pages/game.html
@@ -9,8 +9,9 @@
     <script src="./../libs/phaser.js"></script>
     <title>Retro Runaway</title>
   </head>
-  <body class="flex align-center">
-    <div class="left"></div>
+  <body class="flex">
+    <div class="score"><h2 id="score">Score: 0</h2></div>
+    <script src="./../scripts/dom.js"></script>
     <script src="./../scripts/game.js"></script>
   </body>
 </html>
