Added font and some utilities used in mainMenu

--- a/pages/mainMenu.html
+++ b/pages/mainMenu.html
@@ -1,11 +1,17 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <link rel="stylesheet" href="./../styles/base/mainMenu.css">
+    <link rel="stylesheet" href="./../styles/base/base.css">
+    <link rel="stylesheet" href="./../styles/base/utilities.css">
+    <link rel="stylesheet" href="./../styles/base/fonts.css">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>MAIN MENU</title>
 </head>
 <body>
-    
+    <div class="full-viewport overflow-hidden img-container">
+        <img src="./../assets/images/mainMenuBG.jpg" alt="Main Menu Retro Background">
+    </div>
 </body>
 </html>
