--- a/pages/game.html
+++ b/pages/game.html
@@ -9,8 +9,10 @@
     <script src="./../libs/phaser.js"></script>
     <title>Retro Runaway</title>
   </head>
-  <body class="flex">
+  <body class="flex space-between">
     <div class="score"><h2 id="score">Score: 0</h2></div>
+    <button id="level1" class="level-btn">Level 1</button>
+    <button id="level2" class="level-btn">Level 2</button>
     <script src="./../scripts/dom.js"></script>
     <script src="./../scripts/game.js"></script>
   </body>
