--- a/pages/mainMenu.html
+++ b/pages/mainMenu.html
@@ -23,10 +23,8 @@
         class="flex column align-center white-color center items full-size space-evenly"
       >
         <p class="title-size">RETRO RUNAWAY</p>
-        <!--<p class="absolute-position shadow-titles primary-color">RETRO RUNAWAY</p>-->
 
         <p class="sub-title-size">ENTER USERNAME</p>
-        <!--<p class="absolute-position sub-shadow-titles1 primary-color">ENTER USERNAME</p>-->
 
         <input
           type="text"
@@ -35,10 +33,9 @@
         />
 
         <p class="sub-title-size">CHOOSE YOUR CAR</p>
-        <!--<p class="shadow-sub-titles sub-titles-size">CHOOSE YOUR CAR</p>-->
 
         <div class="flex car-imgs-container">
-          <button class="borders">
+          <button class="borders">   
             <img src="./../assets/images/pink-car.png" alt="Pink Car" />
           </button>
           <button class="borders">
@@ -49,8 +46,12 @@
           </button>
         </div>
 
-        <button class="play-bttn borders opacity primary-color">PLAY</button>
-      </div>
+        <div class="flex play-container"> 
+            <button class="play-size borders opacity primary-color" >PLAY</button>
+            <button class="borders opacity primary-color">
+                <img src="./../assets/images/help-icon.png" alt="HELP"/>
+            </button>
+        </div>
     </div>
   </body>
 </html>
