Completed functionalities of play/help buttons with validation

--- a/pages/mainMenu.html
+++ b/pages/mainMenu.html
@@ -30,6 +30,7 @@
           type="text"
           placeholder="Enter Username"
           class="borders opacity primary-color"
+          id="username"
         />
 
         <p class="sub-title-size">CHOOSE YOUR CAR</p>
@@ -47,11 +48,14 @@
         </div>
 
         <div class="flex play-container"> 
-            <button class="play-size borders opacity primary-color" >PLAY</button>
+            <button class="play-size borders opacity primary-color" id="play-bttn" >PLAY</button>
             <button class="borders opacity primary-color">
-                <img src="./../assets/images/help-icon.png" alt="HELP"/>
+                <img src="./../assets/images/help-icon.png" alt="Help Icon" id="help-bttn"/>
             </button>
         </div>
     </div>
+
+    <script src="./../scripts/dom.js"></script>
+    <script src="./../scripts/main-menu.js"></script>
   </body>
 </html>
