--- a/pages/game.html
+++ b/pages/game.html
@@ -13,7 +13,8 @@
     <div class="flex column align-center side-section">
       <div class="flex column align-center game-settings">
         <div class="score"><h2 id="score">Score: 0</h2></div>
-        <button id="level1">Level 1</button>
+        <h2 id="level">Level 1</h2>
+        <!-- <button id="level1">Level 1</button> -->
       </div>
 
       <div class="win-card flex column align-center" id="win">
