Add - level 3 and debugged win()

--- a/pages/game.html
+++ b/pages/game.html
@@ -20,6 +20,7 @@
       <div class="win-card flex column align-center" id="win">
         <h2>Hooray!! You won!</h2>
         <h2>Advance to:</h2>
+        <button id="winBtn"></button>
       </div>
 
       <div class="lose-card">
