Completed Navbar of website

--- a/index.html
+++ b/index.html
@@ -1,9 +1,39 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
+    <link rel="stylesheet" href="./styles/home.css" />
+    <link rel="stylesheet" href="./../styles/base/base.css" />
+    <link rel="stylesheet" href="./../styles/base/utilities.css" />
+    <link rel="stylesheet" href="./../styles/base/fonts.css" />
+    <link rel="stylesheet" href="./../styles/base/colors.css" />
+    <link
+      size="16x16"
+      rel="icon"
+      href="./assets/images/retro-runaway-logo.png"
+      type="image/png"
+    />
+
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>Retro Runaway</title>
   </head>
-  <body></body>
+  <body>
+    <header>
+      <div
+        class="navbar-container relative-position full-width primary-color-bg"
+      >
+        <img
+          src="./assets/images/retro-runaway-logo(78x83).png"
+          alt="Retro Runaway Logo"
+          class="absolute-position"
+        />
+        <div class="flex justify-center align-center navbar white-color">
+          <p><a href="#gameplay">GAMEPLAY</a></p>
+          <p><a href="#characters">CHARACTERS</a></p>
+          <p><a href="#maps">MAPS</a></p>
+          <p><a href="#tutorials">TUTORIALS</a></p>
+        </div>
+      </div>
+    </header>
+  </body>
 </html>
