Add - comments and base of lose operation

--- a/pages/game.html
+++ b/pages/game.html
@@ -23,9 +23,9 @@
         <button id="winBtn"></button>
       </div>
 
-      <div class="lose-card">
+      <div class="lose-card" id="lose">
         <h2>Game Over</h2>
-        <button id="level2">Level 2</button>
+        <button id="loseBtn">Try Again</button>
       </div>
     </div>
 
