Add - choosing a specific car function

--- a/pages/mainMenu.html
+++ b/pages/mainMenu.html
@@ -6,7 +6,6 @@
     <link rel="stylesheet" href="./../styles/base/utilities.css" />
     <link rel="stylesheet" href="./../styles/base/fonts.css" />
     <link rel="stylesheet" href="./../styles/base/colors.css" />
-
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>MAIN MENU</title>
@@ -33,17 +32,17 @@
           id="username"
         />
 
-        <p class="sub-title-size">CHOOSE YOUR CAR</p>
+        <p class="sub-title-size" id="cars-title">CHOOSE YOUR CAR</p>
 
         <div class="flex car-imgs-container">
-          <button class="borders">   
+          <button class="borders" car-color="pink">   
             <img src="./../assets/images/pink-car.png" alt="Pink Car" />
           </button>
-          <button class="borders">
-            <img src="./../assets/images/green-car.png" alt="Pink Car" />
+          <button class="borders" car-color="green">
+            <img src="./../assets/images/green-car.png" alt="Green Car" />
           </button>
-          <button class="borders">
-            <img src="./../assets/images/red-car.png" alt="Pink Car" />
+          <button class="borders" car-color="yellow">
+            <img src="./../assets/images/yellow-car.png" alt="Yellow Car" />
           </button>
         </div>
 
