Completed hero section & gameplay

--- a/index.html
+++ b/index.html
@@ -28,12 +28,50 @@
           class="absolute-position"
         />
         <div class="flex justify-center align-center navbar white-color">
-          <p><a href="#gameplay">GAMEPLAY</a></p>
+          <p><a href="#gamePlay">GAMEPLAY</a></p>
           <p><a href="#characters">CHARACTERS</a></p>
           <p><a href="#maps">MAPS</a></p>
           <p><a href="#tutorials">TUTORIALS</a></p>
         </div>
       </div>
     </header>
+
+    <section class="hero-section">
+      <img
+        src="./assets/images/hero-section-bg.jpg"
+        alt="Pink blue maze"
+        class="full-size relative-position"
+      />
+
+      <div class="absolute-position center hero-item flex column align-center">
+        <p class="primary-color">RETRO RUNAWAY</p>
+        <button class="borders primary-color-bg white-color">PLAY</button>
+      </div>
+    </section>
+
+    <section class="offWhite-color-bg primary-color" id="gamePlay">
+      <div class="flex align-center space-evenly">
+        <div class="flex column game-play-title">
+          <p class="text-align">WE ARE</p>
+          <p class="text-align">RETRO</p>
+          <p class="text-align">RUNAWAY</p>
+        </div>
+
+        <div class="vertical-line"></div>
+
+        <div class="text-align game-play-description" style="font-size: 24px">
+          <p>
+            Retro Runaway is a thrilling maze-based game where you navigate a
+            car through tile paths. Your mission is to collect a key that
+            unlocks the door to the next level. Along the way, gather as many
+            coins as possible to boost your score! But watch out—the mazes get
+            trickier with each stage.
+          </p>
+          <p>
+            Can you find the key, grab the coins, and speed your way to victory?
+          </p>
+        </div>
+      </div>
+    </section>
   </body>
 </html>
