Added play button  functionality

--- a/index.html
+++ b/index.html
@@ -45,7 +45,9 @@
 
       <div class="absolute-position center hero-item flex column align-center">
         <p class="primary-color">RETRO RUNAWAY</p>
-        <button class="borders primary-color-bg white-color">PLAY</button>
+        <button class="borders primary-color-bg white-color" id="play-bttn-IW">
+          PLAY
+        </button>
       </div>
     </section>
 
@@ -73,5 +75,8 @@
         </div>
       </div>
     </section>
+
+    <script src="./../scripts/dom.js"></script>
+    <script src="./scripts/index.js"></script>
   </body>
 </html>
