Add - display message of game and lose after level

--- a/pages/game.html
+++ b/pages/game.html
@@ -26,20 +26,32 @@
       </div>
 
       <div
-        class="center win-card flex column align-center secondary-color-bg grey-color justify-center"
+        class="win-card flex column align-center justify-center center secondary-color-bg grey-color"
         id="win"
       >
         <h2>Hooray!! You won!</h2>
         <h2>Advance to:</h2>
-        <button id="winBtn"></button>
+        <button id="winBtn" class="borders opacity primary-color"></button>
       </div>
 
       <div
-        class="center lose-card flex column align-center secondary-color-bg grey-color justify-center"
+        class="lose-card flex column align-center justify-center center secondary-color-bg grey-color"
         id="lose"
       >
         <h2>Game Over</h2>
-        <button id="loseBtn">Try Again</button>
+        <button id="loseBtn" class="borders opacity primary-color">
+          Try Again
+        </button>
+      </div>
+
+      <div
+        class="end-card flex column align-center justify-center center secondary-color-bg grey-color"
+        id="end"
+      >
+        <h2>Congrats You have finished the Game</h2>
+        <button id="endBtn" class="borders opacity primary-color">
+          Back to Main
+        </button>
       </div>
     </div>
 
