--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <link rel="stylesheet" href="./../styles/base/utilities.css" />
     <link rel="stylesheet" href="./../styles/base/fonts.css" />
     <link rel="stylesheet" href="./../styles/base/colors.css" />
+    <link rel="stylesheet" href="./styles/styles.css">
     <link
       size="16x16"
       rel="icon"
@@ -75,6 +76,33 @@
         </div>
       </div>
     </section>
+
+    <section class="tutorial" id="tutorial">
+      <h2>HOW TO PLAY THE MAZE GAME</h2>
+      <p class="tutorial-intro">Navigate through each level's maze, collect all coins before time runs out, and progress to the next challenge!</p>
+      <div class="tutorial-grid">
+          <div class="tutorial-item">
+              <img src="./assets/images/objective.png" alt="Objective Icon" class="tutorial-icon" />
+              <h3>Objective</h3>
+              <p>Collect all the coins in the maze to unlock the next level. Time is limited, so act quickly!</p>
+          </div>
+          <div class="tutorial-item">
+              <img src="./assets/images/controls.png" alt="Controls Icon" class="tutorial-icon" />
+              <h3>Controls</h3>
+              <p>Use the arrow keys to move through the maze. Navigate carefully to avoid losing precious seconds.</p>
+          </div>
+          <div class="tutorial-item">
+              <img src="./assets/images/next-level.png" alt="Levels Icon" class="tutorial-icon" />
+              <h3>Levels</h3>
+              <p>Each level is progressively harder, with more complex maze patterns and faster timers.</p>
+          </div>
+          <div class="tutorial-item">
+              <img src="./assets/images/tips.png" alt="Tips Icon" class="tutorial-icon" />
+              <h3>Tips</h3>
+              <p>Plan your path! Take note of where the coins are located before you start moving.</p>
+          </div>
+      </div>
+  </section>
 
     <script src="./../scripts/dom.js"></script>
     <script src="./scripts/index.js"></script>
