--- a/pages/game.html
+++ b/pages/game.html
@@ -21,6 +21,7 @@
       <div
         class="flex column align-center justify-center game-settings grey-color"
       >
+        <div class="score"><h2 id="time">Time: 2:00</h2></div>
         <div class="score"><h2 id="score">Score: 0</h2></div>
         <h2 id="level">Level 1</h2>
       </div>
