Add - character section in website

--- a/index.html
+++ b/index.html
@@ -75,6 +75,28 @@
         </div>
       </div>
     </section>
+    <section class="car-section flex justify-center align-center">
+      <div class="flex column align-center primary-color-bg space-between">
+        <p class="white-color">Choose a car to Explore</p>
+        <div class="flex align-center space-between car-cards">
+          <div class="pink-car flex justify-center align-center">
+            <div>
+              <img src="./assets/images/pink-car.png" alt="" />
+            </div>
+          </div>
+          <div class="yellow-car flex justify-center align-center">
+            <div>
+              <img src="./assets/images/yellow-car.png" alt="" />
+            </div>
+          </div>
+          <div class="green-car flex justify-center align-center">
+            <div>
+              <img src="./assets/images/green-car.png" alt="" />
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
 
     <script src="./../scripts/dom.js"></script>
     <script src="./scripts/index.js"></script>
