--- a/index.html
+++ b/index.html
@@ -104,6 +104,37 @@
       </div>
   </section>
 
+  <footer id="footer">
+    <div class="footer-content">
+        <div class="footer-credits">
+            <h3>Maze Game</h3>
+            <p>Created by:</p>
+            <div class="creators">
+                <a href="https://github.com/Moatasimzz" target="_blank" class="creator-link">Moatasim</a>
+                <a href="https://github.com/BreicheSinal" target="_blank" class="creator-link">Sinal</a>
+                <a href="https://github.com/Sana-Kassamani" target="_blank" class="creator-link">Sana</a>
+            </div>
+        </div>
+        <div class="footer-links">
+            <h3>Quick Links</h3>
+            <a href="#hero">Home</a>
+            <a href="#maze">Maze</a>
+            <a href="#tutorial">Tutorial</a>
+        </div>
+        <div class="social-media">
+            <h3>Follow Us</h3>
+            <a href="#"><img src="./assets/images/facebook.png" alt="Facebook Icon"></a>
+            <a href="https://github.com/Moatasimzz/retro-runaway-repo"><img src="./assets/images/github.png" alt="Twitter Icon"></a>
+            <a href="#"><img src="./assets/images/instagram.png" alt="Instagram Icon"></a>
+        </div>
+        <div class="footer-info">
+            <h3>About This Game</h3>
+            <p>This game was built using Phaser.js and designed to provide fun and challenge. We hope you enjoy exploring each maze!</p>
+        </div>
+    </div>
+</footer>
+
+
     <script src="./../scripts/dom.js"></script>
     <script src="./scripts/index.js"></script>
   </body>
