--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
     </section>
 
     <section class="offWhite-color-bg primary-color" id="gamePlay">
-      <div class="flex align-center space-evenly">
+      <div class="flex gameplay align-center space-evenly">
         <div class="flex column game-play-title">
           <p class="text-align">WE ARE</p>
           <p class="text-align">RETRO</p>
@@ -61,7 +61,7 @@
 
         <div class="vertical-line"></div>
 
-        <div class="text-align game-play-description" style="font-size: 24px">
+        <div class="text-align game-play-description">
           <p>
             Retro Runaway is a thrilling maze-based game where you navigate a
             car through tile paths. Your mission is to collect a key that
@@ -76,63 +76,118 @@
       </div>
     </section>
 
-    <section class="tutorial" id="tutorial">
+    <section class="tutorial" id="tutorials">
       <h2>HOW TO PLAY THE MAZE GAME</h2>
-      <p class="tutorial-intro">Navigate through each level's maze, collect all coins before time runs out, and progress to the next challenge!</p>
+      <p class="tutorial-intro">
+        Navigate through each level's maze, collect the key and raise your score
+        by collecting coins before time runs out, and progress to the next
+        challenge!
+      </p>
       <div class="tutorial-grid">
-          <div class="tutorial-item">
-              <img src="./assets/images/objective.png" alt="Objective Icon" class="tutorial-icon" />
-              <h3>Objective</h3>
-              <p>Collect all the coins in the maze to unlock the next level. Time is limited, so act quickly!</p>
-          </div>
-          <div class="tutorial-item">
-              <img src="./assets/images/controls.png" alt="Controls Icon" class="tutorial-icon" />
-              <h3>Controls</h3>
-              <p>Use the arrow keys to move through the maze. Navigate carefully to avoid losing precious seconds.</p>
-          </div>
-          <div class="tutorial-item">
-              <img src="./assets/images/next-level.png" alt="Levels Icon" class="tutorial-icon" />
-              <h3>Levels</h3>
-              <p>Each level is progressively harder, with more complex maze patterns and faster timers.</p>
-          </div>
-          <div class="tutorial-item">
-              <img src="./assets/images/tips.png" alt="Tips Icon" class="tutorial-icon" />
-              <h3>Tips</h3>
-              <p>Plan your path! Take note of where the coins are located before you start moving.</p>
-          </div>
+        <div class="tutorial-item">
+          <img
+            src="./assets/images/objective.png"
+            alt="Objective Icon"
+            class="tutorial-icon"
+          />
+          <h3>Objective</h3>
+          <p>
+            Collect the key to unlock the next level. Don't forget your score
+            and collect the coins. Time is limited, so act quickly!
+          </p>
+        </div>
+        <div class="tutorial-item">
+          <img
+            src="./assets/images/controls.png"
+            alt="Controls Icon"
+            class="tutorial-icon"
+          />
+          <h3>Controls</h3>
+          <p>
+            Use the arrow keys to move through the maze. Navigate carefully to
+            avoid losing precious seconds.
+          </p>
+        </div>
+        <div class="tutorial-item">
+          <img
+            src="./assets/images/next-level.png"
+            alt="Levels Icon"
+            class="tutorial-icon"
+          />
+          <h3>Levels</h3>
+          <p>
+            Each level is progressively harder, with more complex maze patterns
+            and faster timers.
+          </p>
+        </div>
+        <div class="tutorial-item">
+          <img
+            src="./assets/images/tips.png"
+            alt="Tips Icon"
+            class="tutorial-icon"
+          />
+          <h3>Tips</h3>
+          <p>
+            Plan your path! Take note of where the coins are located before you
+            start moving.
+          </p>
+        </div>
       </div>
-  </section>
+    </section>
 
-  <footer id="footer">
-    <div class="footer-content">
+    <footer id="footer">
+      <div class="footer-content">
         <div class="footer-credits">
-            <h3>Maze Game</h3>
-            <p>Created by:</p>
-            <div class="creators">
-                <a href="https://github.com/Moatasimzz" target="_blank" class="creator-link">Moatasim</a>
-                <a href="https://github.com/BreicheSinal" target="_blank" class="creator-link">Sinal</a>
-                <a href="https://github.com/Sana-Kassamani" target="_blank" class="creator-link">Sana</a>
-            </div>
+          <h3>Maze Game</h3>
+          <p>Created by:</p>
+          <div class="creators">
+            <a
+              href="https://github.com/Moatasimzz"
+              target="_blank"
+              class="creator-link"
+              >Moatasim</a
+            >
+            <a
+              href="https://github.com/BreicheSinal"
+              target="_blank"
+              class="creator-link"
+              >Sinal</a
+            >
+            <a
+              href="https://github.com/Sana-Kassamani"
+              target="_blank"
+              class="creator-link"
+              >Sana</a
+            >
+          </div>
         </div>
         <div class="footer-links">
-            <h3>Quick Links</h3>
-            <a href="#hero">Home</a>
-            <a href="#maze">Maze</a>
-            <a href="#tutorial">Tutorial</a>
+          <h3>Quick Links</h3>
+          <a href="#hero">Home</a>
+          <a href="#maze">Maze</a>
+          <a href="#tutorial">Tutorial</a>
         </div>
         <div class="social-media">
-            <h3>Follow Us</h3>
-            <a href="#"><img src="./assets/images/facebook.png" alt="Facebook Icon"></a>
-            <a href="https://github.com/Moatasimzz/retro-runaway-repo"><img src="./assets/images/github.png" alt="Twitter Icon"></a>
-            <a href="#"><img src="./assets/images/instagram.png" alt="Instagram Icon"></a>
+          <h3>Follow Us</h3>
+          <a href="#"
+            ><img src="./assets/images/facebook.png" alt="Facebook Icon"
+          /></a>
+          <a href="https://github.com/Moatasimzz/retro-runaway-repo"
+            ><img src="./assets/images/github.png" alt="Twitter Icon"
+          /></a>
+          <a href="#"
+            ><img src="./assets/images/instagram.png" alt="Instagram Icon"
+          /></a>
         </div>
         <div class="footer-info">
-            <h3>About This Game</h3>
-            <p>This game was built using Phaser.js and designed to provide fun and challenge. We hope you enjoy exploring each maze!</p>
+          <h3>About This Game</h3>
+          <p>
+            This game was built using Phaser.js and designed to provide fun and
+            challenge. We hope you enjoy exploring each maze!
+          </p>
         </div>
-    </div>
-</footer>
-
+      </div>
+    </footer>
 
     <script src="./../scripts/dom.js"></script>
     <script src="./scripts/index.js"></script>
