Add - responsiveness in cars section

--- a/index.html
+++ b/index.html
@@ -75,22 +75,26 @@
         </div>
       </div>
     </section>
-    <section class="car-section flex justify-center align-center">
+
+    <section
+      class="car-section flex justify-center align-center"
+      id="characters"
+    >
       <div class="flex column align-center primary-color-bg space-between">
         <p class="white-color">Choose a car to Explore</p>
         <div class="flex align-center space-between car-cards">
           <div class="pink-car flex justify-center align-center">
-            <div>
+            <div class="flex justify-center align-center">
               <img src="./assets/images/pink-car.png" alt="" />
             </div>
           </div>
           <div class="yellow-car flex justify-center align-center">
-            <div>
+            <div class="flex justify-center align-center">
               <img src="./assets/images/yellow-car.png" alt="" />
             </div>
           </div>
           <div class="green-car flex justify-center align-center">
-            <div>
+            <div class="flex justify-center align-center">
               <img src="./assets/images/green-car.png" alt="" />
             </div>
           </div>
@@ -100,6 +104,7 @@
 
     <section
       class="maze-section flex column align-center justify-center offWhite-color-bg"
+      id="maps"
     >
       <div class="flex align-center space-around maze1">
         <div class="flex align-center justify-center maze-text">
@@ -119,7 +124,7 @@
       </div>
     </section>
 
-    <section class="tutorial" id="tutorial">
+    <section class="tutorial" id="tutorials">
       <h2>HOW TO PLAY THE MAZE GAME</h2>
       <p class="tutorial-intro">
         Navigate through each level's maze, collect all coins before time runs
