--- a/index.html
+++ b/index.html
@@ -107,18 +107,18 @@
       id="maps"
     >
       <div class="flex align-center space-around maze1">
-        <div class="flex align-center justify-center maze-text">
+        <div class="flex align-center justify-center maze-text primary-color">
           <p>MAZES BECOME MORE AND MORE CHALLENGING</p>
         </div>
         <div class="maze-img-right">
-          <img src="./assets/images/maze1.png" alt="" />
+          <img src="./assets/images/lvl01.png" alt="MAZE LVL 01" />
         </div>
       </div>
       <div class="flex align-center space-around maze2">
         <div class="maze-img-left">
-          <img src="./assets/images/maze2.png" alt="" />
+          <img src="./assets/images/lvl03.png" alt="MAZE LVL03" />
         </div>
-        <div class="flex align-center justify-center maze-text">
+        <div class="flex align-center justify-center maze-text primary-color">
           <p>AS YOU ADVANCE IN LEVELS !</p>
         </div>
       </div>
