--- a/pages/game.html
+++ b/pages/game.html
@@ -10,6 +10,12 @@
     <link rel="stylesheet" href="./../styles/game.css" />
     <script src="./../libs/phaser.js"></script>
     <title>Retro Runaway</title>
+    <link
+      size="16x16"
+      rel="icon"
+      href="../assets/images/retro-runaway-logo.png"
+      type="image/png"
+    />
   </head>
   <body class="flex row secondary-color-bg full-viewport">
     <div
@@ -30,7 +36,7 @@
         class="win-card flex column align-center justify-center center secondary-color-bg grey-color"
         id="win"
       >
-        <h2>Hooray!! You won!</h2>
+        <h2>Hooray!!</h2>
         <h2>Advance to:</h2>
         <button id="winBtn" class="borders opacity primary-color"></button>
       </div>
@@ -39,7 +45,7 @@
         class="lose-card flex column align-center justify-center center secondary-color-bg grey-color"
         id="lose"
       >
-        <h2>Game Over</h2>
+        <h2>Game Over!</h2>
         <button id="loseBtn" class="borders opacity primary-color">
           Try Again
         </button>
@@ -49,10 +55,8 @@
         class="end-card flex column align-center justify-center center secondary-color-bg grey-color"
         id="end"
       >
-        <h2>Congrats You have finished the Game</h2>
-        <button id="endBtn" class="borders opacity primary-color">
-          Back to Main
-        </button>
+        <h2>Congrats Mate!</h2>
+        <button id="endBtn" class="borders opacity primary-color">BACK</button>
       </div>
     </div>
 
