--- a/pages/mainMenu.html
+++ b/pages/mainMenu.html
@@ -9,6 +9,12 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>MAIN MENU</title>
+    <link
+      size="16x16"
+      rel="icon"
+      href="../assets/images/retro-runaway-logo.png"
+      type="image/png"
+    />
   </head>
   <body class="full-size">
     <div class="full-viewport overflow-hidden relative-position padding-mM">
