--- a/index.html
+++ b/index.html
@@ -29,8 +29,8 @@
         />
         <div class="flex justify-center align-center navbar white-color">
           <p><a href="#gamePlay">GAMEPLAY</a></p>
-          <p><a href="#characters">CHARACTERS</a></p>
-          <p><a href="#maps">MAPS</a></p>
+          <p><a href="#characters">CARS</a></p>
+          <p><a href="#maps">MAZES</a></p>
           <p><a href="#tutorials">TUTORIALS</a></p>
         </div>
       </div>
@@ -211,9 +211,10 @@
         </div>
         <div class="footer-links">
           <h3>Quick Links</h3>
-          <a href="#hero">Home</a>
-          <a href="#maze">Maze</a>
-          <a href="#tutorial">Tutorial</a>
+          <a href="index.html">Home</a>
+          <a href="#gamePlay">Gameplay</a>
+          <a href="#maps">Maze</a>
+          <a href="#tutorials">Tutorial</a>
         </div>
         <div class="social-media">
           <h3>Follow Us</h3>
